--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+            android:screenOrientation="sensor"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
