--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,15 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    testImplementation 'junit:junit:4.12'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:25.4.0'
-    testImplementation 'junit:junit:4.12'
+    implementation 'android.arch.lifecycle:runtime:1.0.0-alpha3'
+    implementation 'android.arch.lifecycle:extensions:1.0.0-alpha3'
+    annotationProcessor 'android.arch.lifecycle:compiler:1.0.0-alpha3'
+
     //noinspection GradleCompatible
     implementation 'com.android.support:design:25.4.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
