--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.1.2-4'
+    ext.android_plugin_version = '2.3.3'
     repositories {
         google()
         jcenter()
