--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,18 @@
+sudo: false
 language: android
-
 jdk:
   - oraclejdk8
+
+before_install:
+  - chmod +x gradlew
 
 android:
   components:
     - tools
-    - platform-tools
     - tools
+    - platform-tools
+    - extra
+    - add-on
 
     # The BuildTools version used by your project
     - build-tools-26.0.0
@@ -15,3 +20,17 @@ android:
     # The SDK version used to compile your project
     - android-26
     - extra-android-m2repository
+    - extra-google-m2repository
+    # Google Play Services
+    - extra-google-google_play_services
+    # Support library
+    - extra-android-support
+
+    - addon-google_apis-google-26
+    - sys-img-armeabi-v7a-addon-google_apis-google-26
+  before_script:
+    - echo no | android create avd --force -n test -t android-26 --abi armeabi-v7a
+    - emulator -avd test -no-skin -no-audio -no-window &
+    - android-wait-for-emulator
+    - adb shell input keyevent 82 &
+
