--- a/.travis.yml
+++ b/.travis.yml
@@ -1,36 +1,48 @@
-sudo: false
 language: android
-jdk:
-  - oraclejdk8
+sudo: false
+jdk: oraclejdk8
 
-before_install:
-  - chmod +x gradlew
+before_cache:
+  -rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+  -rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    -$HOME/.gradle/caches/
+    -$HOME/.gradle/wrapper/
+env:
+  global:
+    - ANDROID_API=26
+    - EMULATOR_API=25
+    - ANDROID_BUILD_TOOLS=26.0.0
+    - ADB_INSTALL_TIMEOUT=5
 
 android:
   components:
     - tools
-    - tools
     - platform-tools
-    - extra
-    - add-on
-
-    # The BuildTools version used by your project
-    - build-tools-26.0.0
-
-    # The SDK version used to compile your project
-    - android-26
-    - extra-android-m2repository
+    - build-tools-$ANDROID_BUILD_TOOLS
+    - android-$ANDROID_API
+    - android-$EMULATOR_API_LEVEL
     - extra-google-m2repository
-    # Google Play Services
-    - extra-google-google_play_services
-    # Support library
-    - extra-android-support
+    - extra-android-m2repository # for design library
+    - addon-google_apis-google-19 # google play services
+    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
+    - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
+  licenses:
+    - android-sdk-preview-license-.+
+    - android-sdk-license-.+
+    - google-gdk-license-.+
 
-    - addon-google_apis-google-26
-    - sys-img-armeabi-v7a-addon-google_apis-google-26
-  before_script:
-    - echo no | android create avd --force -n test -t android-26 --abi armeabi-v7a
-    - emulator -avd test -no-skin -no-audio -no-window &
-    - android-wait-for-emulator
-    - adb shell input keyevent 82 &
 
+before_install:
+  - chmod +x gradlew
+
+before_script:
+  - echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+
+script:
+  - "./gradlew clean build connectedAndroidTest -PdisablePreDex --stacktrace"
+  - "./gradlew clean build test" 
