--- a/.travis.yml
+++ b/.travis.yml
@@ -22,13 +22,13 @@ android:
     - platform-tools
     - build-tools-26.0.0
     - android-26
-    - android-25
+    - android-21
     - extra-google-m2repository
     - extra-android-m2repository # for design library
     - addon-google_apis-google-26 # google play services
-    - addon-google_apis-google-25 # google play services
-    - sys-img-armeabi-v7a-addon-google_apis-google-26
-    - sys-img-armeabi-v7a-addon-google_apis-google-25
+    - addon-google_apis-google-21 # google play services
+    - sys-img-armeabi-v7a-google_apis-26
+    - sys-img-armeabi-v7a-google_apis-21
   licenses:
     - android-sdk-preview-license-.+
     - android-sdk-license-.+
@@ -40,7 +40,7 @@ before_install:
 
 before_script:
   - android list targets
-  - echo no | android create avd --force -n test -t android-25
+  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
