--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,6 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
-
 apply plugin: 'kotlin-kapt'
 
 android {
@@ -14,14 +11,14 @@ android {
         applicationId "in.nowke.koluconvert"
         minSdkVersion 15
         targetSdkVersion 26
-        versionCode 2
-        versionName "1.1"
+        versionCode 3
+        versionName "2.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -35,28 +32,28 @@ kapt {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    testImplementation 'junit:junit:4.12'
-    testImplementation ("android.arch.core:core-testing:1.0.0-alpha3", {
+    //noinspection GradleCompatible
+    implementation "com.android.support:appcompat-v7:$support_version"
+    //noinspection GradleCompatible
+    implementation "com.android.support:design:$support_version"
+    //noinspection GradleCompatible
+    implementation "com.android.support:support-vector-drawable:$support_version"
+    implementation "android.arch.lifecycle:runtime:$arch_version"
+    implementation "android.arch.lifecycle:extensions:$arch_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+    annotationProcessor "android.arch.lifecycle:compiler:$arch_version"
+
+    testImplementation "junit:junit:$junit_version"
+    testImplementation ("android.arch.core:core-testing:$arch_version", {
         exclude group: 'com.android.support', module: 'support-compat'
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.android.support', module: 'support-core-utils'
     })
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:25.4.0'
-    implementation 'android.arch.lifecycle:runtime:1.0.0-alpha3'
-    implementation 'android.arch.lifecycle:extensions:1.0.0-alpha3'
-    annotationProcessor 'android.arch.lifecycle:compiler:1.0.0-alpha3'
-
-    //noinspection GradleCompatible
-    implementation 'com.android.support:design:25.4.0'
-    //noinspection GradleCompatible
-    implementation 'com.android.support:support-vector-drawable:25.4.0'
+    androidTestImplementation("com.android.support.test.espresso:espresso-core:$espresso_version", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
 
     kapt "com.android.databinding:compiler:$android_plugin_version"
 }
