--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.3'
-    ext.android_plugin_version = '3.0.0-alpha5'
+    ext {
+        kotlin_version ='1.1.3'
+        android_plugin_version = '3.0.0-alpha5'
+        support_version = '25.4.0'
+        arch_version = '1.0.0-alpha3'
+        junit_version = '4.12'
+        espresso_version = '2.2.2'
+    }
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha5'
+        classpath "com.android.tools.build:gradle:$android_plugin_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
