--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     androidTestImplementation("com.android.support.test.espresso:espresso-core:$espresso_version", {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    androidTestImplementation("org.hamcrest:hamcrest-library:$hamcrest_version")
 
     kapt "com.android.databinding:compiler:$android_plugin_version"
 }
