--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         arch_version = '1.0.0-alpha3'
         junit_version = '4.12'
         espresso_version = '2.2.2'
+        hamcrest_version = '1.3'
     }
 
     repositories {
